# carrierassure

./: README.md  docker-compose.yml
.github/workflows/: cli.yml
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml  pytest.ini  ruff.toml
backend/src/: settings.py  urls.py
backend/src/scoring/: apps.py  urls.py
backend/src/scoring/files/: sample_ccf.json  sample_ccf_modified.json
backend/src/scoring/migrations/: 0001_initial.py
backend/src/scoring/models/: __init__.py  carrier.py  ccf.py
backend/src/scoring/repositories/: carrier.py
backend/src/scoring/serializers/: carrier.py  ccf.py
backend/src/scoring/services/: ccf_processing.py  processing_result.py  record.py  scoring.py
backend/src/scoring/utils/: hashing.py
backend/src/scoring/views/: ccf_upload_view.py  scoring_view.py
backend/src/tests/: test_carrier.py  test_hashing.py
frontend/: .eslintrc.json  .gitignore  Dockerfile  eslint.config.js  index.html  next.config.js  ngnix.conf  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/app/: dashboard.jsx  layout.jsx  page.jsx
frontend/src/: Dashboard.jsx  main.jsx
frontend/src/test/: DashBoard.test.tsx
frontend/tests/: test_dashboard.jsx
