[project]
name = "carrierassure"
version = "0.1.0"
description = "Carrier Test"
authors = [
    {name = "Hector"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django (>=6.0.3,<7.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
